--- a/index.html
+++ b/index.html
@@ -22,24 +22,10 @@
 
     <title>tatchaTouch</title>
 </head>
-<body ng-controller="MainCtrl">
+<body>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div>
-                    <h1>Tatcha Touch!</h1>
-                        <div class="col-md-3" ng-repeat="photo in photos">
-                                <div class="thumbnail">
-                                    <img ng-src="{{photo.url}}">
-                                </div>
-                                    <div>
-                                        <h3>Tatch@{{photo.id}}</h3>
-                                        <p>{{photo.title}}</p>
-                                    </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div class="col-md-12" ng-view></div>
         </div>
     </body>
 </html>
