added animation and styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <!-- custom script (angular app) -->
     <script type="text/javascript" src="app.js"></script>
 
+    <!-- custom styles -->
+      <link type="text/css" rel="stylesheet" href="style.css">
+
+
     <title>tatchaTouch</title>
 </head>
 <body>
